--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>이름 - 이력서</title>
+  <title>Haemin Lee - Simple Rejume</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>이름</h1>
-    <h2>직업</h2>
-    <p>연락처 정보</p>
+    <h1>Haemin Lee</h1>
+    <h2></h2>
+    <p>http://www.linkedin.com/in/haeminl</p>
   </header>
 
   <section class="profile">
-    <h3>프로필 요약</h3>
-    <p>본인의 강점, 경험, 목표 등을 간략하게 소개합니다.</p>
+    <h3></h3>
+    <p>Native Korean Speaker, English(TESOL), Japanese(JLPT1), Artist(Traditional,Digital) maintained art blog to the global audience (15k followers at the time), Art Therapist, iso 14001:2004 integrated internal auditor, HTML, CSS, Maya (as a student, game creating) experienced</p>
   </section>
 
   <section class="experience">
-    <h3>경력</h3>
+    <h3>2022/10--Current</h3>
     <ul>
       <li>
-        <h4>회사명 (기간)</h4>
-        <p>직책 및 주요 업무 내용을 요약합니다.</p>
+        <h4>Google Via Vaco</h4>
+        <p>Merchandising Associate</p>
       </li>
-      <li>
+      <li>In Charge of Editorial Operational management and also excels in writing. Programming through internal tools, Dashboards data management, content curating and Designing Editorial contents.
         </li>
     </ul>
   </section>
