--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <header>
     <h1>Haemin Lee</h1>
     <h2></h2>
-    <p>http://www.linkedin.com/in/haeminl</p>
+    <p>linkedin.com/in/haeminl</p>
+    <p>sherlock.kr</p>
   </header>
 
   <section class="profile">
@@ -27,6 +28,32 @@
       </li>
       <li>In Charge of Editorial Operational management and also excels in writing. Programming through internal tools, Dashboards data management, content curating and Designing Editorial contents.
         </li>
+
+              <h4>Google Via Adecco</h4>
+        <p>Content Reviewer</p>
+      </li>
+      <li>Responsible for moderating YouTube videos across English, Korean, and Japanese languages.
+        </li>
+
+          <h4>Fukuoka International Airport Co.,Ltd.</h4>
+        <p>Airport information assistant</p>
+      </li>
+      <li>Provide customer support and information in Japanese, English and Korean, assisting travelers with flight details, navigation, and tour or travel information to ensure a smooth airport experience.
+        </li>
+
+            <h4>Freelancer</h4>
+        <p>Content Creator</p>
+      </li>
+      <li>Specialize in creating visually engaging graphics and artistic content for blogs. Experienced in web services and graphic design, with a focus on crafting compelling visuals for popular blog platforms.
+        </li>
+
+                  <h4>Intertech Limited</h4>
+        <p>iso 14001:2004 integrated internal auditor</p>
+      </li>
+      <li>Providing Insights to improve working environment as ISO auditor, experiencing various business marketing in Japan and oversea. creating ISO manuals and legal documents in Japanese and English. Provide Korean translations for the top class eco recycled manufacturer. 
+        </li>
+      
+      
     </ul>
   </section>
 
