--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <header>
     <h1>Haemin Lee</h1>
     <h2></h2>
-    <p>linkedin.com/in/haeminl</p>
-    <p>sherlock.kr</p>
+    <p><a href="https://www.linkedin.com/in/haeminl</a>linkedin.com/in/haeminl</p>
+    <p><a href="https://sherlock.kr</a>sherlock.kr</p>
   </header>
 
   <section class="profile">
@@ -61,7 +61,7 @@
     <h3>학력</h3>
     <ul>
       <li>
-        <h4>학교명 (졸업 연도)</h4>
+        <h4>Keimyung Univercity</h4>
         <p>전공 및 주요 성과를 요약합니다.</p>
       </li>
       <li>
