--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <header>
     <h1>Haemin Lee</h1>
     <h2></h2>
-    <p><a href="https://www.linkedin.com/in/haeminl</a>linkedin.com/in/haeminl</p>
-    <p><a href="https://sherlock.kr</a>sherlock.kr</p>
+    <p><a href="https://www.linkedin.com/in/haeminl"</a>linkedin.com/in/haeminl</p>
+    <p><a href="https://sherlock.kr"</a>sherlock.kr</p>
   </header>
 
   <section class="profile">
