--- a/header.html
+++ b/header.html
@@ -8,16 +8,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://sherlock.kr">sherlock.kr</a>
+          <a class="navbar-brand" href="https://github.milkcaffine.io/hml">https://github.milkcaffine.io/hml</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-               <li><a href="https://milkcaffine.github.io/hux/art.html">My Art</a></li>
                <li><a href="https://milkcaffine.github.io/hux/index.html">Blog</a></li>
-            <li><a href="https://milkcaffine.github.io/hux/about.html">About - working on it</a></li>
-              <li><a href="https://milkcaffine.github.io/hux/archive.html">Archive - working on it</a></li>
-            <li><a href="https://x.com/navidubu">X</a></li>
-            <li><a href="https://www.instagram.com/navidubu/">Insta</a></li>
           </ul>
