--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@ $("#headers").load("header.html");
  <div class="row">
 
       <div class="col-md-4 portfolio-item">
-          <a href="2025/2025-05-30.html"><img class="img-responsive" 
-                                             src="https://github.com/milkcaffine/hux/blob/main/images/2025-05-30-01.jpg?raw=true">
+          <a href="2025/2025-05-30.html"><
           <h3>xm6,xm5</a></h3>
           <p>sony - 2025-05-30</p>
         </div>
@@ -62,38 +61,7 @@ $("#headers").load("header.html");
           <div class="col-md-4 portfolio-item">
           <a href="2025/2025-03-03.html"><img class="img-responsive" 
                                              src="https://github.com/milkcaffine/hux/blob/main/images/2025-03-03.jpg?raw=true">
-          <h3>Montblanc & bock - wip</a></h3>
-          <p>Fountain Pens - 2025-03-03</p>
-        </div>
-
- <div class="col-md-4 portfolio-item">
-          <a href="2025/2025-02-11.html"><img class="img-responsive" 
-                                      src="https://github.com/milkcaffine/hux/blob/main/images/2025-02-11.jpg?raw=true"></a>
-          <h3><a href="2025/2025-02-11.html">My watch died - wip</a></h3>
-          <p>Refurbished Apple Watch - 2025-02-11</p>
-        </div>
-
-     <div class="col-md-4 portfolio-item">
-          <a href="2025/2025-02-15.html"><img class="img-responsive" 
-                                             src="https://github.com/milkcaffine/hux/blob/main/images/2025-02-15.jpg?raw=true">
-          <h3>Mars & Febble</a></h3>
-          <p>ebook reader - 2025-02-15</p>
-        </div>
-
-
-
-        <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="https://github.com/milkcaffine/hux/blob/main/images/123.jpg?raw=true"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-              Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-
-          <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="https://github.com/milkcaffine/hux/blob/main/images/123.jpg?raw=true"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-              Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        
         </div>         
           
       </div>
@@ -115,7 +83,7 @@ $("#headers").load("header.html");
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; mindsoap.net / sherlock.kr  <span id="getCurrentDate"></span></p>
+            <p>Copyright &copy; github.milkcaffine.io/hml <span id="getCurrentDate"></span></p>
           </div>
         </div>
       </footer>
