--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
 
     <title>HML</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom CSS for the '3 Col Portfolio' Template -->
-    <link href="css/3-col-portfolio.css" rel="stylesheet">
-
     <!-- header/footer script -->
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript">   
@@ -39,14 +33,14 @@ $("#headers").load("header.html");
       <div class="row">
           
         <div class="col-lg-12">
-           <h1 class="page-header">mindsoap.net <small><small><small> ꧁( ꒪⌓꒪)꧂<small><small></small></h1>
+           <h1 class="page-header">HML <small><small><small> ꧁( ꒪⌓꒪)꧂<small><small></small></h1>
         </div>
       </div>
               
  <div class="row">
 
       <div class="col-md-4 portfolio-item">
-          <a href="2025/2025-05-30.html"><
+          <a href="2025/2025-05-30.html">
           <h3>xm6,xm5</a></h3>
           <p>sony - 2025-05-30</p>
         </div>
