--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 
           </button>
-          <a class="navbar-brand" href="https://milkcaffine.github.io/hml/">https://github.milkcaffine.io/hml</a>
+          <a class="navbar-brand" href="https://milkcaffine.github.io/hml/">https://milkcaffine.github.io/hml/</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
