--- a/header.html
+++ b/header.html
@@ -11,5 +11,5 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-               <li><a href="https://milkcaffine.github.io/hux/index.html">Blog</a></li>
+               <li><a href="https://milkcaffine.github.io/hml/index.html">Top</a></li>
           </ul>
